# py-switchbot-api

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/worfkflows/: check.yml  release.yml
.github/workflows/: check.yml  checking.yaml  linting.yaml  release.yml  tests.yaml  typing.yaml
switchbot_api/: __init__.py  commands.py  const.py  exceptions.py  models.py  utils.py
tests/: __init__.py  conftest.py  const.py  syrupy.py  test_client.py
tests/__snapshots__/: test_client.ambr
tests/fixtures/: curtain.json  curtain3.json  device_list.json  hub_2.json  ir_remote.json
