[tool.poetry]
name = "switchbot_api"
version = "2.3.1"
description = "An asynchronous library to use Switchbot API"
authors = ["Ravaka Razafimanantsoa <contact@ravaka.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "switchbot_api"}]
repository = "https://github.com/SeraphicCorp/py-switchbot-api"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = ">=23.1,<25.0"
coverage = "^7.2.1"
parameterized = "^0.8.1"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest-asyncio = "^0.25.2"
pytest-freezer = "^0.4.9"
pytest = "^8.3.4"
syrupy = "^4.8.1"
aioresponses = "^0.7.7"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"
pythonpath = ["switchbot_api"]

[tool.coverage.run]
branch = true
omit = [
    "*/test_*.py",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 0


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
