[tool.poetry]
name = "switchbot_api"
version = "2.3.1"
description = "An asynchronous library to use Switchbot API"
authors = ["Ravaka Razafimanantsoa <contact@ravaka.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "switchbot_api"}]
repository = "https://github.com/SeraphicCorp/py-switchbot-api"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">=3.0.0"


[tool.poetry.group.dev.dependencies]
coverage = {version = "7.6.10", extras = ["toml"]}
mypy = "^1.4.1"
pytest-asyncio = "^0.25.2"
pytest-freezer = "^0.4.9"
pytest = "^8.3.4"
syrupy = "^4.8.1"
aioresponses = "^0.7.7"
ruff = "^0.9.2"
pytest-cov = "^6.0.0"
covdefaults = "^2.3.0"

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"
pythonpath = ["switchbot_api"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 0

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["switchbot_api"]


[tool.ruff.lint]
ignore = [
  "N818",
  "ANN003",
  "D101",
  "E501",
  "D400",
  "D415",
  "ANN202",
  "ANN001",
  "SIM117",
  "RSE102",
  "FA102",
  "ANN201",
  "RET504",
  "D401",
  "D413",
  "I001",
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "COM812", # Conflicts with other rules
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "ISC001", # Conflicts with other rules
  "PLR2004", # Just annoying, not really useful
]
select = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["switchbot_api"]
force-sort-within-sections = true
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 25


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
